<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/profileFragment"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/menuFragment"
            android:title="@string/booking" />
        <item
            android:id="@+id/friendsFragment"
            android:title="@string/friends" />
        <item
            android:id="@+id/groupsFragment"
            android:title="@string/groups" />
        <item
        android:id="@+id/friendSearchFragment"
        android:title="@string/search_buddies"/>
        <item
            android:id="@+id/roomSearchFragment"
            android:title="@string/search_rooms" />



    </group>
</menu>